[feat] admin API 구현 - #48